ooErlang-listener/CerlParser.java
// Generated from Cerl.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CerlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, TokAtom=70, TokVar=71, TokFloat=72, TokInteger=73, 
		TokChar=74, TokString=75, AttrName=76, Comment=77, WS=78;
	public static final int
		RULE_forms = 0, RULE_form = 1, RULE_oo_attributes_1 = 2, RULE_oo_attributes = 3, 
		RULE_oo_attribute = 4, RULE_oo_methods = 5, RULE_tokAtom = 6, RULE_tokVar = 7, 
		RULE_tokFloat = 8, RULE_tokInteger = 9, RULE_tokChar = 10, RULE_tokString = 11, 
		RULE_attribute = 12, RULE_typeSpec = 13, RULE_specFun = 14, RULE_typedAttrVal = 15, 
		RULE_typedRecordFields = 16, RULE_typedExprs = 17, RULE_typedExpr = 18, 
		RULE_typeSigs = 19, RULE_typeSig = 20, RULE_typeGuards = 21, RULE_typeGuard = 22, 
		RULE_topTypes = 23, RULE_topType = 24, RULE_topType100 = 25, RULE_type = 26, 
		RULE_funType100 = 27, RULE_funType = 28, RULE_mapPairTypes = 29, RULE_mapPairType = 30, 
		RULE_fieldTypes = 31, RULE_fieldType = 32, RULE_binaryType = 33, RULE_binBaseType = 34, 
		RULE_binUnitType = 35, RULE_attrVal = 36, RULE_function = 37, RULE_functionClause = 38, 
		RULE_clauseArgs = 39, RULE_clauseGuard = 40, RULE_clauseBody = 41, RULE_expr = 42, 
		RULE_exprMax = 43, RULE_functionCall = 44, RULE_remoteExpr = 45, RULE_list = 46, 
		RULE_tail = 47, RULE_binary = 48, RULE_binElements = 49, RULE_binElement = 50, 
		RULE_bitExpr = 51, RULE_optBitSizeExpr = 52, RULE_optBitTypeList = 53, 
		RULE_bitTypeList = 54, RULE_bitType = 55, RULE_bitSizeExpr = 56, RULE_listComprehension = 57, 
		RULE_binaryComprehension = 58, RULE_lcExprs = 59, RULE_lcExpr = 60, RULE_tuple = 61, 
		RULE_bracedExpr = 62, RULE_beginEndExpr = 63, RULE_map = 64, RULE_mapFields = 65, 
		RULE_mapField = 66, RULE_recordExpr = 67, RULE_recordTuple = 68, RULE_recordFields = 69, 
		RULE_recordField = 70, RULE_ifExpr = 71, RULE_ifClauses = 72, RULE_ifClause = 73, 
		RULE_caseExpr = 74, RULE_crClauses = 75, RULE_crClause = 76, RULE_receiveExpr = 77, 
		RULE_funExpr = 78, RULE_atomOrVar = 79, RULE_integerOrVar = 80, RULE_funClauses = 81, 
		RULE_funClause = 82, RULE_tryExpr = 83, RULE_tryCatch = 84, RULE_tryClauses = 85, 
		RULE_tryClause = 86, RULE_argumentList = 87, RULE_exprs = 88, RULE_guard = 89, 
		RULE_atomic = 90, RULE_prefixOp = 91, RULE_multOp = 92, RULE_addOp = 93, 
		RULE_listOp = 94, RULE_compOp = 95, RULE_ruleClauses = 96, RULE_ruleClause = 97, 
		RULE_ruleBody = 98;
	public static final String[] ruleNames = {
		"forms", "form", "oo_attributes_1", "oo_attributes", "oo_attribute", "oo_methods", 
		"tokAtom", "tokVar", "tokFloat", "tokInteger", "tokChar", "tokString", 
		"attribute", "typeSpec", "specFun", "typedAttrVal", "typedRecordFields", 
		"typedExprs", "typedExpr", "typeSigs", "typeSig", "typeGuards", "typeGuard", 
		"topTypes", "topType", "topType100", "type", "funType100", "funType", 
		"mapPairTypes", "mapPairType", "fieldTypes", "fieldType", "binaryType", 
		"binBaseType", "binUnitType", "attrVal", "function", "functionClause", 
		"clauseArgs", "clauseGuard", "clauseBody", "expr", "exprMax", "functionCall", 
		"remoteExpr", "list", "tail", "binary", "binElements", "binElement", "bitExpr", 
		"optBitSizeExpr", "optBitTypeList", "bitTypeList", "bitType", "bitSizeExpr", 
		"listComprehension", "binaryComprehension", "lcExprs", "lcExpr", "tuple", 
		"bracedExpr", "beginEndExpr", "map", "mapFields", "mapField", "recordExpr", 
		"recordTuple", "recordFields", "recordField", "ifExpr", "ifClauses", "ifClause", 
		"caseExpr", "crClauses", "crClause", "receiveExpr", "funExpr", "atomOrVar", 
		"integerOrVar", "funClauses", "funClause", "tryExpr", "tryCatch", "tryClauses", 
		"tryClause", "argumentList", "exprs", "guard", "atomic", "prefixOp", "multOp", 
		"addOp", "listOp", "compOp", "ruleClauses", "ruleClause", "ruleBody"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'class_attributes'", "'attributes'", "'class_methods'", 
		"'methods'", "';'", "'='", "'-'", "'('", "')'", "':'", "'/'", "'::'", 
		"','", "'{'", "'}'", "'when'", "'|'", "'..'", "'['", "']'", "'...'", "'#'", 
		"'fun'", "'->'", "'=>'", "'<<'", "'>>'", "'*'", "'catch'", "'!'", "'orelse'", 
		"'andalso'", "'||'", "'<-'", "'<='", "'begin'", "'end'", "':='", "'if'", 
		"'case'", "'of'", "'receive'", "'after'", "'try'", "'+'", "'bnot'", "'not'", 
		"'div'", "'rem'", "'band'", "'and'", "'bor'", "'bxor'", "'bsl'", "'bsr'", 
		"'or'", "'xor'", "'++'", "'--'", "'=='", "'/='", "'=<'", "'<'", "'>='", 
		"'>'", "'=:='", "'=/='", "':-'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "TokAtom", 
		"TokVar", "TokFloat", "TokInteger", "TokChar", "TokString", "AttrName", 
		"Comment", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cerl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CerlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CerlParser.EOF, 0); }
		public List<FormContext> form() {
			return getRuleContexts(FormContext.class);
		}
		public FormContext form(int i) {
			return getRuleContext(FormContext.class,i);
		}
		public FormsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forms; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitForms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormsContext forms() throws RecognitionException {
		FormsContext _localctx = new FormsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_forms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(198);
				form();
				}
				}
				setState(201); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__7))) != 0) || _la==TokAtom || _la==AttrName );
			setState(203);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public RuleClausesContext ruleClauses() {
			return getRuleContext(RuleClausesContext.class,0);
		}
		public Oo_attributes_1Context oo_attributes_1() {
			return getRuleContext(Oo_attributes_1Context.class,0);
		}
		public Oo_methodsContext oo_methods() {
			return getRuleContext(Oo_methodsContext.class,0);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitForm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_form);
		int _la;
		try {
			setState(218);
			switch (_input.LA(1)) {
			case T__7:
			case TokAtom:
			case AttrName:
				enterOuterAlt(_localctx, 1);
				{
				setState(208);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(205);
					attribute();
					}
					break;
				case 2:
					{
					setState(206);
					function();
					}
					break;
				case 3:
					{
					setState(207);
					ruleClauses();
					}
					break;
				}
				setState(210);
				match(T__0);
				}
				break;
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(212);
				_la = _input.LA(1);
				if ( !(_la==T__1 || _la==T__2) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(213);
				match(T__0);
				setState(214);
				oo_attributes_1();
				}
				}
				break;
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(215);
				_la = _input.LA(1);
				if ( !(_la==T__3 || _la==T__4) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(216);
				match(T__0);
				setState(217);
				oo_methods();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Oo_attributes_1Context extends ParserRuleContext {
		public Oo_attributeContext oo_attribute() {
			return getRuleContext(Oo_attributeContext.class,0);
		}
		public Oo_attributesContext oo_attributes() {
			return getRuleContext(Oo_attributesContext.class,0);
		}
		public Oo_attributes_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oo_attributes_1; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitOo_attributes_1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Oo_attributes_1Context oo_attributes_1() throws RecognitionException {
		Oo_attributes_1Context _localctx = new Oo_attributes_1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_oo_attributes_1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(227);
			switch (_input.LA(1)) {
			case TokVar:
				{
				setState(220);
				oo_attribute();
				setState(224);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(221);
					match(T__0);
					}
					break;
				case T__5:
					{
					setState(222);
					match(T__5);
					setState(223);
					oo_attributes();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case EOF:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__7:
			case TokAtom:
			case AttrName:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Oo_attributesContext extends ParserRuleContext {
		public Oo_attributeContext oo_attribute() {
			return getRuleContext(Oo_attributeContext.class,0);
		}
		public Oo_attributesContext oo_attributes() {
			return getRuleContext(Oo_attributesContext.class,0);
		}
		public Oo_attributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oo_attributes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitOo_attributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Oo_attributesContext oo_attributes() throws RecognitionException {
		Oo_attributesContext _localctx = new Oo_attributesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_oo_attributes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			oo_attribute();
			setState(233);
			switch (_input.LA(1)) {
			case T__5:
				{
				setState(230);
				match(T__5);
				setState(231);
				oo_attributes();
				}
				break;
			case T__0:
				{
				setState(232);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Oo_attributeContext extends ParserRuleContext {
		public TokVarContext tokVar() {
			return getRuleContext(TokVarContext.class,0);
		}
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public Oo_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oo_attribute; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitOo_attribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Oo_attributeContext oo_attribute() throws RecognitionException {
		Oo_attributeContext _localctx = new Oo_attributeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_oo_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(235);
			tokVar();
			setState(239);
			switch (_input.LA(1)) {
			case T__0:
			case T__5:
				{
				}
				break;
			case T__6:
				{
				setState(237);
				match(T__6);
				setState(238);
				exprs();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Oo_methodsContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public Oo_methodsContext oo_methods() {
			return getRuleContext(Oo_methodsContext.class,0);
		}
		public Oo_methodsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oo_methods; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitOo_methods(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Oo_methodsContext oo_methods() throws RecognitionException {
		Oo_methodsContext _localctx = new Oo_methodsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_oo_methods);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(246);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(241);
				function();
				setState(242);
				match(T__0);
				setState(243);
				oo_methods();
				}
				break;
			case 2:
				{
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokAtomContext extends ParserRuleContext {
		public TerminalNode TokAtom() { return getToken(CerlParser.TokAtom, 0); }
		public TokAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokAtom; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitTokAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokAtomContext tokAtom() throws RecognitionException {
		TokAtomContext _localctx = new TokAtomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tokAtom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(248);
			match(TokAtom);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokVarContext extends ParserRuleContext {
		public TerminalNode TokVar() { return getToken(CerlParser.TokVar, 0); }
		public TokVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitTokVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokVarContext tokVar() throws RecognitionException {
		TokVarContext _localctx = new TokVarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tokVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(250);
			match(TokVar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokFloatContext extends ParserRuleContext {
		public TerminalNode TokFloat() { return getToken(CerlParser.TokFloat, 0); }
		public TokFloatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokFloat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitTokFloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokFloatContext tokFloat() throws RecognitionException {
		TokFloatContext _localctx = new TokFloatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tokFloat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(252);
			match(TokFloat);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokIntegerContext extends ParserRuleContext {
		public TerminalNode TokInteger() { return getToken(CerlParser.TokInteger, 0); }
		public TokIntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokInteger; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitTokInteger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokIntegerContext tokInteger() throws RecognitionException {
		TokIntegerContext _localctx = new TokIntegerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tokInteger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(254);
			match(TokInteger);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokCharContext extends ParserRuleContext {
		public TerminalNode TokChar() { return getToken(CerlParser.TokChar, 0); }
		public TokCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokChar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CerlVisitor ) return ((CerlVisitor<? extends T>)visitor).visitTokChar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokCharContext tokChar() throws RecognitionException {
		TokCharContext _localctx = new TokCharContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tokChar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(256);
			match(TokChar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
